Prevent YouTube videos being too wide

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -67,6 +67,7 @@ hr {
 
 iframe {
   border: none;
+  max-width: 100%;
 }
 
 .small {
